--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,53 +1,101 @@
+name: Docker Build and Push
+
 on:
-  release:
-    types: [published]  # Only triggers when a release is published
-  schedule:
-    - cron: "0 0 * * *" # Nightly build
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Docker image tag (e.g., v1.0.0, latest)'
+        required: true
+        default: 'latest'
+        type: string
+      push_to_registry:
+        description: 'Push to Docker Hub after build'
+        required: true
+        default: true
+        type: boolean
+      build_rag_image:
+        description: 'Also build RAG service image (Dockerfile.rag)'
+        required: false
+        default: false
+        type: boolean
+
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        
+        uses: actions/checkout@v4
+      
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
+        uses: docker/setup-buildx-action@v3
+      
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        if: ${{ inputs.push_to_registry }}
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_PAT }}
-          
-      - name: Extract metadata
+          username: admonstrator
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      
+      - name: Extract metadata for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
-          images: |
-            ${{ secrets.DOCKER_USERNAME }}/paperless-ai
-            ghcr.io/${{ github.repository_owner }}/paperless-ai
+          images: admonstrator/paperless-ai-enhanced
           tags: |
-            type=schedule,pattern=nightly
-            type=semver,pattern={{version}},enable=${{ github.event_name == 'release' }}
-            type=raw,value=latest,enable=${{ github.event_name == 'release' }}
-            
-      - name: Build and push
-        uses: docker/build-push-action@v4
+            type=raw,value=${{ inputs.tag }}
+      
+      - name: Build and push main Docker image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          platforms: linux/amd64,linux/arm64
+          file: ./Dockerfile
+          push: ${{ inputs.push_to_registry }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
+      
+      - name: Build and push RAG service image
+        if: ${{ inputs.build_rag_image }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.rag
+          push: ${{ inputs.push_to_registry }}
+          tags: admonstrator/paperless-ai-enhanced-rag:${{ inputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
+      
+      - name: Image build summary
+        run: |
+          echo "### Docker Build Summary :rocket:" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "#### Main Image" >> $GITHUB_STEP_SUMMARY
+          echo "- **Image**: admonstrator/paperless-ai-enhanced" >> $GITHUB_STEP_SUMMARY
+          echo "- **Tag**: ${{ inputs.tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Platforms**: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
+          echo "- **Pushed**: ${{ inputs.push_to_registry }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ inputs.build_rag_image }}" = "true" ]; then
+            echo "#### RAG Service Image" >> $GITHUB_STEP_SUMMARY
+            echo "- **Image**: admonstrator/paperless-ai-enhanced-rag" >> $GITHUB_STEP_SUMMARY
+            echo "- **Tag**: ${{ inputs.tag }}" >> $GITHUB_STEP_SUMMARY
+            echo "- **Platforms**: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+          fi
+          if [ "${{ inputs.push_to_registry }}" = "true" ]; then
+            echo "---" >> $GITHUB_STEP_SUMMARY
+            echo "✅ **Images successfully pushed to Docker Hub**" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
+            echo "docker pull admonstrator/paperless-ai-enhanced:${{ inputs.tag }}" >> $GITHUB_STEP_SUMMARY
+            if [ "${{ inputs.build_rag_image }}" = "true" ]; then
+              echo "docker pull admonstrator/paperless-ai-enhanced-rag:${{ inputs.tag }}" >> $GITHUB_STEP_SUMMARY
+            fi
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "ℹ️ Images built locally only (not pushed)" >> $GITHUB_STEP_SUMMARY
+          fi
