--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn>=0.21.1
 python-dotenv>=1.0.0
 requests>=2.28.2
 numpy>=1.24.2
-torch>=2.0.0
+torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
 sentence-transformers>=2.2.2
 chromadb>=0.3.21
 rank-bm25>=0.2.2
