--- a/.github/workflows/docker-ghcr.yml
+++ b/.github/workflows/docker-ghcr.yml
@@ -3,11 +3,6 @@ name: Build and Push to GHCR
 on:
   workflow_dispatch:
     inputs:
-      tag:
-        description: 'Docker image tag (e.g., v3.0.9-1)'
-        required: true
-        default: 'latest'
-        type: string
       also_tag_latest:
         description: 'Also tag as "latest"'
         required: false
@@ -18,13 +13,66 @@ on:
         required: false
         default: false
         type: boolean
+  push:
+    branches:
+      - main
 
 env:
   REGISTRY: ghcr.io
 
 jobs:
+  # Job 0: Generate version tag
+  generate-version:
+    name: Generate Version Tag
+    runs-on: ubuntu-latest
+    outputs:
+      version_tag: ${{ steps.version.outputs.tag }}
+      base_version: ${{ steps.version.outputs.base }}
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Generate version tag
+        id: version
+        run: |
+          # Extract base version from config.js
+          BASE_VERSION=$(grep "PAPERLESS_AI_VERSION:" config/config.js | sed "s/.*'\(.*\)'.*/\1/")
+          echo "Base version: $BASE_VERSION"
+          
+          # Get all tags matching the base version pattern
+          git fetch --tags
+          LATEST_BUILD=$(git tag -l "v${BASE_VERSION}-*" | sed "s/v${BASE_VERSION}-//" | sort -n | tail -1)
+          
+          # If no build number found, start with 1
+          if [ -z "$LATEST_BUILD" ]; then
+            BUILD_NUMBER=1
+          else
+            BUILD_NUMBER=$((LATEST_BUILD + 1))
+          fi
+          
+          VERSION_TAG="v${BASE_VERSION}-${BUILD_NUMBER}"
+          echo "Generated version tag: $VERSION_TAG"
+          
+          echo "tag=$VERSION_TAG" >> $GITHUB_OUTPUT
+          echo "base=$BASE_VERSION" >> $GITHUB_OUTPUT
+      
+      - name: Create and push tag
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          VERSION_TAG="${{ steps.version.outputs.tag }}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "$VERSION_TAG" -m "Automated build $VERSION_TAG"
+          git push origin "$VERSION_TAG"
+
   # Job 1: Build and Push Lite Image
   build-push-lite:
+    needs: generate-version
     name: Build & Push Lite Image
     runs-on: ubuntu-latest
     permissions:
@@ -95,10 +143,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.name }}
           tags: |
-            type=raw,value=${{ inputs.tag || 'latest' }}
-            type=raw,value=${{ inputs.tag || 'latest' }}-lite
-            type=raw,value=latest,enable=${{ inputs.also_tag_latest == true || github.ref == 'refs/heads/main' }}
-            type=raw,value=latest-lite,enable=${{ inputs.also_tag_latest == true || github.ref == 'refs/heads/main' }}
+            type=raw,value=${{ needs.generate-version.outputs.version_tag }}
+            type=raw,value=${{ needs.generate-version.outputs.version_tag }}-lite
+            type=raw,value=latest,enable=${{ inputs.also_tag_latest == true || github.event_name == 'push' }}
+            type=raw,value=latest-lite,enable=${{ inputs.also_tag_latest == true || github.event_name == 'push' }}
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=ref,event=pr
@@ -126,9 +174,10 @@ jobs:
 
   # Job 2: Build and Push Full Image
   build-push-full:
+    needs: generate-version
     name: Build & Push Full Image
     runs-on: ubuntu-latest
-    if: ${{ inputs.build_full_image == true || github.ref == 'refs/heads/main' }}
+    if: ${{ inputs.build_full_image == true || github.event_name == 'push' }}
     permissions:
       contents: read
       packages: write
@@ -197,8 +246,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ steps.repo.outputs.name }}
           tags: |
-            type=raw,value=${{ inputs.tag || 'latest' }}-full
-            type=raw,value=latest-full,enable=${{ inputs.also_tag_latest == true || github.ref == 'refs/heads/main' }}
+            type=raw,value=${{ needs.generate-version.outputs.version_tag }}-full
+            type=raw,value=latest-full,enable=${{ inputs.also_tag_latest == true || github.event_name == 'push' }}
             type=semver,pattern={{version}}-full
             type=semver,pattern={{major}}.{{minor}}-full
             type=ref,event=pr,suffix=-full
@@ -228,7 +277,7 @@ jobs:
   summary:
     name: Build Summary
     runs-on: ubuntu-latest
-    needs: [build-push-lite]
+    needs: [generate-version, build-push-lite]
     if: always()
     
     steps:
@@ -236,7 +285,8 @@ jobs:
         run: |
           echo "### 🚀 GHCR Build Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Tag:** \`${{ inputs.tag || 'auto' }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Version Tag:** \`${{ needs.generate-version.outputs.version_tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Base Version:** \`${{ needs.generate-version.outputs.base_version }}\`" >> $GITHUB_STEP_SUMMARY
           echo "**Registry:** GitHub Container Registry (GHCR)" >> $GITHUB_STEP_SUMMARY
           echo "**Event:** ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -247,18 +297,18 @@ jobs:
           echo "- **Features:** Full AI tagging, no RAG" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
-          echo "docker pull ghcr.io/${{ github.repository }}:${{ inputs.tag || 'latest' }}" >> $GITHUB_STEP_SUMMARY
+          echo "docker pull ghcr.io/${{ github.repository }}:${{ needs.generate-version.outputs.version_tag }}" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          if [ "${{ inputs.build_full_image }}" = "true" ] || [ "${{ github.ref }}" = "refs/heads/main" ]; then
+          if [ "${{ inputs.build_full_image }}" = "true" ] || [ "${{ github.event_name }}" = "push" ]; then
             echo "#### ✅ Full Image (with RAG)" >> $GITHUB_STEP_SUMMARY
             echo "- **Size:** ~1.5-2 GB (optimized with multi-stage build)" >> $GITHUB_STEP_SUMMARY
             echo "- **Platforms:** linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
             echo "- **Features:** AI tagging + RAG semantic search" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
-            echo "docker pull ghcr.io/${{ github.repository }}:${{ inputs.tag || 'latest' }}-full" >> $GITHUB_STEP_SUMMARY
+            echo "docker pull ghcr.io/${{ github.repository }}:${{ needs.generate-version.outputs.version_tag }}-full" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           else
             echo "#### ℹ️ Full Image" >> $GITHUB_STEP_SUMMARY
